--- a/catalogo.html
+++ b/catalogo.html
@@ -85,14 +85,17 @@
               <div class="col-md">
                 <div class="card tipo1
                 " href="producto.html">
+                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 3</h>
                     <div class="card-body text-center">
-                        <h3 class="card-title mb-3">Sahuaro</h3>
-                        <div class="h1 mb-3 ">
+                        <h3 class="card-title mb-0" style="font-weight:600">Sahuaro<br></h3>
+                        <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
+                        <div class="h1 mb-3 mt-2">
                             <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
                             <a href="producto.html" class="stretched-link"></a>
                           </div>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             At veniam voluptas provident rem sequi? Ab?</p>
+                            <h5>$19.990</h5>
                     </div>
                 </div>
                 <div class="text-center mt-1">
@@ -102,14 +105,17 @@
 
             <div class="col-md">
               <div class="card tipo1">
+                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
                   <div class="card-body text-center">
-                      <h3 class="card-title mb-3">Gymnocalycium</h3>
-                      <div class="h1 mb-3 ">
+                      <h3 class="card-title mb-0">Gymnocalycium</h3>
+                      <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+                      <div class="h1 mb-3 mt-2">
                           <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 ">
                           <a href="producto.html" class="stretched-link"></a>
                         </div>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                           At veniam voluptas provident rem sequi? Ab?</p>
+                          <h5>$15.990</h5>
                         </div>
                       </div>
                       <div class="text-center mt-1">
@@ -118,16 +124,18 @@
           </div>
 
           <div class="col-md">
-            <div class="card tipo1
-            ">
+            <div class="card tipo1">
+              <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 5</h>
                 <div class="card-body text-center">
-                    <h3 class="card-title mb-3">Ficus Lyrata</h3>
-                    <div class="h1 mb-3 ">
+                    <h3 class="card-title mb-0">Ficus Lyrata</h3>
+                    <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+                    <div class="h1 mb-3 mt-2">
                         <img src="img/plant-svgrepo-com (7).svg" class="text-center w-50 mt-0 " alt="...">
                         <a href="producto.html" class="stretched-link"></a>
                       </div>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         At veniam voluptas provident rem sequi? Ab?</p>
+                        <h5>$15.990</h5>
                 </div>
             </div>
             <div class="text-center mt-1">
@@ -142,16 +150,18 @@
             <div class="row text-center g-4">
 
               <div class="col-md">
-                <div class="card tipo1
-                ">
+                <div class="card tipo1">
+                  <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 120</h>
                     <div class="card-body text-center">
-                        <h3 class="card-title mb-3">Gerbera</h3>
-                        <div class="h1 mb-3 ">
+                        <h3 class="card-title mb-0">Gerbera</h3>
+                        <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: florqla</h>
+                        <div class="h1 mb-3 mt-2">
                             <img src="img/poppy-svgrepo-com (1).svg" class="text-center w-50 mt-0 " alt="...">
                             <a href="producto.html" class="stretched-link"></a>
                           </div>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             At veniam voluptas provident rem sequi? Ab?</p>
+                            <h5>$15.990</h5>
                     </div>
                 </div>
                 <div class="text-center mt-1">
@@ -159,16 +169,18 @@
                 </div>
             </div>
             <div class="col-md">
-              <div class="card tipo1
-              ">
+              <div class="card tipo1">
+                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
                   <div class="card-body text-center">
-                      <h3 class="card-title mb-3">Aspidistra</h3>
-                      <div class="h1 mb-3 ">
+                      <h3 class="card-title mb-0">Aspidistra</h3>
+                      <h class="py-0 mt-0 mb-5" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+                      <div class="h1 mb-3 mt-2 ">
                           <img src="img/plant-svgrepo-com (3).svg" class="text-center w-50 mt-0 " alt="...">
                           <a href="producto.html" class="stretched-link"></a>
                         </div>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                           At veniam voluptas provident rem sequi? Ab?</p>
+                          <h5>$15.990</h5>
                   </div>
               </div>
               <div class="text-center mt-1">
@@ -177,16 +189,18 @@
           </div>
 
           <div class="col-md">
-            <div class="card tipo1
-            ">
+            <div class="card tipo1">
+              <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1.001</h>
                 <div class="card-body text-center">
-                    <h3 class="card-title mb-3">Lophophora diffusa</h3>
-                    <div class="h1 mb-3 ">
+                    <h3 class="card-title mb-0">Lophophora diffusa</h3>
+                    <h class="py-0 mb-2 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
+                    <div class="h1 mb-3 mt-2">
                         <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
                         <a href="producto.html" class="stretched-link"></a>
                       </div>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         At veniam voluptas provident rem sequi? Ab?</p>
+                        <h5>$15.990</h5>
                 </div>
             </div>
             <div class="text-center mt-1">
