--- a/catalogo.html
+++ b/catalogo.html
@@ -12,7 +12,43 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>GreenPlants</title>
+
+  <script>
+
+
+var dolar = 0
+    $.getJSON('https://mindicador.cl/api', function (data) {
+      var dailyIndicators = data;
+      $("<p/>", {
+        html: 'El valor actual de la UF es $' + dailyIndicators.dolar.valor
+      }).appendTo("body");
+      dolar = dailyIndicators.dolar.valor
+    }).fail(function () {
+      console.log('Error al consumir la API!');
+    });
+
+    let flag = 0
+    function updatep() {
+      flag += 1
+      var precios = document.getElementsByClassName("precio")
+      for (var i = 0; i < precios.length; i++) {
+        var precio = precios[i].innerHTML;
+        if (flag % 2 == 0) {
+          temp = precio * dolar
+          precios[i].innerHTML = temp.toFixed(0);
+          document.getElementById("switch").innerHTML = 'CLP';
+        }
+        else {
+          temp = precio * 1 / dolar
+          precios[i].innerHTML = temp.toFixed(2)
+          document.getElementById("switch").innerHTML = 'USD';
+        }
+
+      }
+    }
+  </script>
 
 </head>
 
@@ -40,9 +76,8 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-          <li class="nav-item btn">
-            <div class="bi bi-bucket mt-1" style="font-size: 40px; "> </div>
-            <a class="nav-link stretched-link" href="catalogo.html ">Catalogo</a>
+          <li class="nav-item btn tipo1 ">
+            <a class="nav-link stretched-link" id="switch" onclick="updatep()"> <br> cambiar a dólar</a>
           </li>
           </li>
           <div class="d-flex flex-column">
@@ -50,24 +85,24 @@
               <a class="nav-link" href="registro.html">Registrate </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="dropdown-toggle mx-1 p-1 btn"  href="#" id="navbarDropleft" role="button" data-bs-toggle="dropdown" 
-              aria-expanded="false" style="width:135px">
+              <a class="dropdown-toggle mx-1 p-1 btn" href="#" id="navbarDropleft" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false" style="width:135px">
                 Ingresar
               </a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <div class="col-md-11 p-1">
-                  <input type="text" name="txtCorreo" 
-                  class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-                  maxlength="50" placeholder="Id. Usuario:" 
-                  title="Ingrese su correo electronico/mail">
-              </div>
-              <div class="col-md-11 p-1">
-                <input type="text" name="txtCorreo" 
-                class="txtCorreo form-control" style="background-color: rgba(121, 210, 69, 0.118);" 
-                maxlength="50" placeholder="Contraseña:" 
-                title="Ingrese su correo electronico/mail">
-              </div>
-                <li><hr class="dropdown-divider"></li>
+                  <input type="text" name="txtCorreo" class="txtCorreo form-control"
+                    style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Id. Usuario:"
+                    title="Ingrese su correo electronico/mail">
+                </div>
+                <div class="col-md-11 p-1">
+                  <input type="text" name="txtCorreo" class="txtCorreo form-control"
+                    style="background-color: rgba(121, 210, 69, 0.118);" maxlength="50" placeholder="Contraseña:"
+                    title="Ingrese su correo electronico/mail">
+                </div>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item btn offset-2" style="width:90px" href="#">Entrar</a></li>
               </ul>
             </li>
@@ -78,136 +113,145 @@
   </nav>
 
 
-    <section class="p-5">
-        <div class="container py-0 p-5 mb-4">
-            <div class="row text-center g-4">
+  <section class="p-5">
+    <div class="container py-0 p-5 mb-4">
+      <div class="row text-center g-4">
 
-              <div class="col-md">
-                <div class="card tipo1
+        <div class="col-md">
+          <div class="card tipo1
                 " href="producto.html">
-                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 3</h>
-                    <div class="card-body text-center">
-                        <h3 class="card-title mb-0" style="font-weight:600">Sahuaro<br></h3>
-                        <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
-                        <div class="h1 mb-3 mt-2">
-                            <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                            <a href="producto.html" class="stretched-link"></a>
-                          </div>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            At veniam voluptas provident rem sequi? Ab?</p>
-                            <h5>$19.990</h5>
-                    </div>
-                </div>
-                <div class="text-center mt-1">
-                  <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-                </div>
-            </div>
-
-            <div class="col-md">
-              <div class="card tipo1">
-                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
-                  <div class="card-body text-center">
-                      <h3 class="card-title mb-0">Gymnocalycium</h3>
-                      <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
-                      <div class="h1 mb-3 mt-2">
-                          <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 ">
-                          <a href="producto.html" class="stretched-link"></a>
-                        </div>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                          At veniam voluptas provident rem sequi? Ab?</p>
-                          <h5>$15.990</h5>
-                        </div>
-                      </div>
-                      <div class="text-center mt-1">
-                        <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-                      </div>
-          </div>
-
-          <div class="col-md">
-            <div class="card tipo1">
-              <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 5</h>
-                <div class="card-body text-center">
-                    <h3 class="card-title mb-0">Ficus Lyrata</h3>
-                    <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
-                    <div class="h1 mb-3 mt-2">
-                        <img src="img/plant-svgrepo-com (7).svg" class="text-center w-50 mt-0 " alt="...">
-                        <a href="producto.html" class="stretched-link"></a>
-                      </div>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        At veniam voluptas provident rem sequi? Ab?</p>
-                        <h5>$15.990</h5>
-                </div>
-            </div>
-            <div class="text-center mt-1">
-              <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-            </div>
-        </div>
-
-            </div>
-        </div>
-
-        <div class="container py-0 p-5 mb-5">
-            <div class="row text-center g-4">
-
-              <div class="col-md">
-                <div class="card tipo1">
-                  <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 120</h>
-                    <div class="card-body text-center">
-                        <h3 class="card-title mb-0">Gerbera</h3>
-                        <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: florqla</h>
-                        <div class="h1 mb-3 mt-2">
-                            <img src="img/poppy-svgrepo-com (1).svg" class="text-center w-50 mt-0 " alt="...">
-                            <a href="producto.html" class="stretched-link"></a>
-                          </div>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            At veniam voluptas provident rem sequi? Ab?</p>
-                            <h5>$15.990</h5>
-                    </div>
-                </div>
-                <div class="text-center mt-1">
-                  <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-                </div>
-            </div>
-            <div class="col-md">
-              <div class="card tipo1">
-                <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
-                  <div class="card-body text-center">
-                      <h3 class="card-title mb-0">Aspidistra</h3>
-                      <h class="py-0 mt-0 mb-5" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
-                      <div class="h1 mb-3 mt-2 ">
-                          <img src="img/plant-svgrepo-com (3).svg" class="text-center w-50 mt-0 " alt="...">
-                          <a href="producto.html" class="stretched-link"></a>
-                        </div>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                          At veniam voluptas provident rem sequi? Ab?</p>
-                          <h5>$15.990</h5>
-                  </div>
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 3</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0" style="font-weight:600">Sahuaro<br></h3>
+              <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
+              <div class="h1 mb-3 mt-2">
+                <img src="img/cactus-furniture-nature-11-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                <a href="producto.html" class="stretched-link"></a>
               </div>
-              <div class="text-center mt-1">
-                <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">19990</h5>
+
+            </div>
           </div>
-
-          <div class="col-md">
-            <div class="card tipo1">
-              <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1.001</h>
-                <div class="card-body text-center">
-                    <h3 class="card-title mb-0">Lophophora diffusa</h3>
-                    <h class="py-0 mb-2 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
-                    <div class="h1 mb-3 mt-2">
-                        <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
-                        <a href="producto.html" class="stretched-link"></a>
-                      </div>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        At veniam voluptas provident rem sequi? Ab?</p>
-                        <h5>$15.990</h5>
-                </div>
-            </div>
-            <div class="text-center mt-1">
-              <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
-            </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
         </div>
 
+        <div class="col-md">
+          <div class="card tipo1">
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0">Gymnocalycium</h3>
+              <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+              <div class="h1 mb-3 mt-2">
+                <img src="img/plant-svgrepo-com (2).svg" class="text-center w-50 mt-0 ">
+                <a href="producto.html" class="stretched-link"></a>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">12990</h5>
             </div>
+          </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
         </div>
-    </section>
+
+        <div class="col-md">
+          <div class="card tipo1">
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 5</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0">Ficus Lyrata</h3>
+              <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+              <div class="h1 mb-3 mt-2">
+                <img src="img/plant-svgrepo-com (7).svg" class="text-center w-50 mt-0 " alt="...">
+                <a href="producto.html" class="stretched-link"></a>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">8990</h5>
+            </div>
+          </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container py-0 p-5 mb-5">
+      <div class="row text-center g-4">
+
+        <div class="col-md">
+          <div class="card tipo1">
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 120</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0">Gerbera</h3>
+              <h class="py-0 mb-0 mt-0" style="font-size:20px;font-weight: 400;">Marca: florqla</h>
+              <div class="h1 mb-3 mt-2">
+                <img src="img/poppy-svgrepo-com (1).svg" class="text-center w-50 mt-0 " alt="...">
+                <a href="producto.html" class="stretched-link"></a>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">14990</h5>
+            </div>
+          </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card tipo1">
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0">Aspidistra</h3>
+              <h class="py-0 mt-0 mb-5" style="font-size:20px;font-weight: 400;">Marca: Plantus</h>
+              <div class="h1 mb-3 mt-2 ">
+                <img src="img/plant-svgrepo-com (3).svg" class="text-center w-50 mt-0 " alt="...">
+                <a href="producto.html" class="stretched-link"></a>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">5990</h5>
+            </div>
+          </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
+        </div>
+
+        <div class="col-md">
+          <div class="card tipo1">
+            <h class="p-1 py-0 mb-0" style="text-align: left;text-decoration: underline;">En stock: 1.001</h>
+            <div class="card-body text-center">
+              <h3 class="card-title mb-0">Lophophora diffusa</h3>
+              <h class="py-0 mb-2 mt-0" style="font-size:20px;font-weight: 400;">Marca: Cactusius</h>
+              <div class="h1 mb-3 mt-2">
+                <img src="img/cactus-furniture-nature-3-svgrepo-com.svg" class="text-center w-50 mt-0 " alt="...">
+                <a href="producto.html" class="stretched-link"></a>
+              </div>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                At veniam voluptas provident rem sequi? Ab?</p>
+              <h5 style="display: inline-block">$</h5>
+              <h5 class="precio" style="display: inline-block" id="precio">3990</h5>
+            </div>
+          </div>
+          <div class="text-center mt-1">
+            <a href="venta.html" class="btn tipo1" style="width:100%;border-color: rgba(141, 224, 16, 0.344);">Pedir</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
