--- a/producto3.html
+++ b/producto3.html
@@ -27,10 +27,10 @@
           normal = document.getElementById("precio").innerHTML
         }
         else if (flag % 2 == 0){
-          document.getElementById("precio").innerHTML= dcto.toFixed(0);
+          document.getElementById("precio").innerHTML= normal
         }
         else{
-          document.getElementById("precio").innerHTML= normal;
+          document.getElementById("precio").innerHTML= dcto.toFixed(0);;
         }
         flag += 1
     }
@@ -112,7 +112,7 @@
       <div class="text-light ">
         <div class="card-body mb-5 ">
           <div class=" h1 mb-3 ">
-            <img src="img/cactus-furniture-nature-15-svgrepo-com.svg" class=" w-50 mx-auto my-auto d-block" 
+            <img src="img/plant-svgrepo-com (7).svg" class="p-2 w-50 mx-auto my-auto d-block" 
             style="border: 1px solid rgba(0, 0, 0, 0.51); background-color: rgba(43, 67, 19, 0.132); border-radius: 2%;">
             <div class="text-center">
               <a href="venta.html" class="btn tipo1" style="width:50% ;border-color: black; color:black">Pedir</a>
@@ -124,9 +124,9 @@
     </div>
     <div class="col-md">
       <div class="text-dark">
-        <H1 class="mb-3">Sahuaro</H1>
+        <H1 class="mb-3">Ficus Lyrata</H1>
         <h3 style="display: inline-block">$</h3>
-        <h3 class="precio" style="display: inline-block" id="precio">19990</h3>
+        <h3 class="precio" style="display: inline-block" id="precio">8990</h3>
         <div class="accordion  w-75" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
